--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
 .App {
-  text-align: center;
+  background-color: #113c25;
+  margin: 0;
+  display: flex;
+  padding: 56px 112px;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: flex-end;
+  color: #fcfcfb;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.page-content-container {
+  width: 60%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border: 1px solid red;
 }
-
-.App-link {
-  color: #61dafb;
+h1 {
+  font-family: "Odor Mean Chey";
+  font-size: 32px;
+  line-height: 40px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2 {
+  font-family: "Odor Mean Chey";
+  font-size: 20px;
+  line-height: 28px;
 }
