contact page done

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,7 +2,7 @@
 $primary1: #77c79d;
 $primary2: #61b187;
 $primary3: #47916a;
-$primary4: #347854;
+$primary4: #2b878c;
 $primary5: #296746;
 $primary6: #1b5235;
 $primary7: #113c25;
