--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,3 +1,35 @@
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+
+  font-family: "Palanquin", sans-serif;
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Playfair Display", serif;
+}
+
+h1 {
+  font-size: 40px;
+  list-style: 48px;
+  @media only screen and (max-width: 560px) {
+    font-size: 32px;
+    line-height: 40px;
+  }
+}
+
+button {
+  display: flex;
+  padding: 6px 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 8px;
+  border: none;
+  background: #2b878c;
+  box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.25);
+  color: #fff;
 }
