--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -28,11 +28,16 @@
   align-items: center;
   width: 132px;
   height: 66px;
+  //border: 1px solid black;
 }
+
 .logo a {
   position: relative;
   width: 100%;
   height: 100%;
+}
+.header-logo {
+  width: 130px;
 }
 
 .header-logo.scrolled {
