contact and footer updates

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -13,10 +13,11 @@
   justify-content: space-between;
   padding: 32px 112px;
   z-index: 400;
+  color: #fff;
 }
 
 .header.scrolled {
-  background-color: orange;
+  background-color: #184b4e;
   transition: 0.7s;
   color: white;
 }
