--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -10,7 +10,9 @@
   align-items: center;
   justify-content: center;
   color: #fff;
-  background-color: red;
+  background-image: url("https://d14n4fsapeewqj.cloudfront.net/contact/desktopcontacthero.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
   text-align: center;
   padding: 112px;
   @media only screen and (max-width: 1440px) {
