--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -22,7 +22,9 @@ h1 {
     line-height: 40px;
   }
 }
-
+a {
+  text-decoration: none;
+}
 button {
   display: flex;
   padding: 6px 16px;
@@ -30,6 +32,7 @@ button {
   align-items: center;
   gap: 10px;
   border-radius: 8px;
+  font-weight: 500;
   border: none;
   background: #2b878c;
   box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.25);
