--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -78,7 +78,12 @@
     width: 100%;
   }
 }
-
+.contact-main .form .field:first-child label {
+  color: #fff;
+  @media only screen and (max-width: 800px) {
+    color: #000;
+  }
+}
 .contact-main .details-container {
   // border: 1px solid red;
   display: flex;
