--- a/src/styles/_devotional.scss
+++ b/src/styles/_devotional.scss
@@ -64,3 +64,89 @@
     gap: 20;
   }
 }
+
+.individual-devotional-container {
+  .hero {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+    justify-content: flex-end;
+    padding: 112px 112px 16px 112px;
+    @media only screen and (max-width: 1440px) {
+      padding: 80px 80px 16px 80px;
+    }
+    @media only screen and (max-width: 1024px) {
+      padding: 48px 48px 16px 48px;
+    }
+    @media only screen and (max-width: 800px) {
+      padding: 32px 32px 16px 32px;
+    }
+    @media only screen and (max-width: 560px) {
+      padding: 16px 16px 16px 16px;
+    }
+    aspect-ratio: 224/100;
+    img {
+      position: absolute;
+      z-index: -5;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+    }
+    h1,
+    span {
+      color: #fff;
+    }
+  }
+  .intro {
+    background-color: #0c2627;
+    color: #fff;
+    padding: 40px 112px;
+    @media only screen and (max-width: 1440px) {
+      padding: 40px 80px;
+    }
+    @media only screen and (max-width: 1024px) {
+      padding: 32px 48px;
+    }
+    @media only screen and (max-width: 800px) {
+      padding: 32px 32px;
+    }
+    @media only screen and (max-width: 560px) {
+      padding: 16px 16px;
+    }
+    margin-top: -2px;
+  }
+  .text {
+    padding: 40px 112px;
+    @media only screen and (max-width: 1440px) {
+      padding: 40px 80px;
+    }
+    @media only screen and (max-width: 1024px) {
+      padding: 32px 48px;
+    }
+    @media only screen and (max-width: 800px) {
+      padding: 32px 32px;
+    }
+    @media only screen and (max-width: 560px) {
+      padding: 16px 16px;
+    }
+  }
+  .scriptures {
+    padding: 40px 112px;
+    background-color: #0c2627;
+    color: #fff;
+    @media only screen and (max-width: 1440px) {
+      padding: 40px 80px;
+    }
+    @media only screen and (max-width: 1024px) {
+      padding: 32px 48px;
+    }
+    @media only screen and (max-width: 800px) {
+      padding: 32px 32px;
+    }
+    @media only screen and (max-width: 560px) {
+      padding: 16px 16px;
+    }
+  }
+}
