--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -3,19 +3,16 @@
 @use "global";
 
 .home-page-container .home-hero {
-  background-color: #000;
-  background-image: url("https://d14n4fsapeewqj.cloudfront.net/home/desktophomehero.webp");
-  background-repeat: no-repeat;
-  background-size: contain;
-  height: 90vh;
   display: flex;
   position: relative;
   justify-content: flex-end;
   padding: 112px;
+  aspect-ratio: 1024/600;
+  //border: 1px solid yellow;
   .text {
     margin-top: 48px;
     justify-self: flex-end;
-    border: 1px solid red;
+    // border: 1px solid red;
     h1 {
       color: #fff;
     }
@@ -26,6 +23,21 @@
       font-weight: 700;
     }
   }
+
+  .desktop-hero {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    object-position: top;
+    z-index: -5;
+    @media only screen and (max-width: 1024px) {
+      display: none;
+    }
+  }
+
   .ipad-hero {
     display: none;
   }
@@ -39,7 +51,7 @@
     height: max-content;
     margin-bottom: -2px;
     background-size: cover;
-    aspect-ratio: 834/1113;
+    aspect-ratio: 744/649;
     .text {
       text-align: end;
       width: 60%;
@@ -67,6 +79,9 @@
   @media only screen and (max-width: 560px) {
     background-color: unset;
     padding: 16px;
+  }
+  @media only screen and (min-width: 1700px) {
+    padding: 224px;
   }
 }
 
