--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -77,6 +77,9 @@
   @media only screen and (max-width: 800px) {
     width: 100%;
   }
+  label {
+    color: #000;
+  }
 }
 .contact-main .form .field:first-child label {
   color: #fff;
