--- a/src/styles/_devotional.scss
+++ b/src/styles/_devotional.scss
@@ -72,12 +72,15 @@
     flex-direction: column;
     gap: 0;
     justify-content: flex-end;
+    aspect-ratio: 16/8;
     padding: 112px 112px 16px 112px;
     @media only screen and (max-width: 1440px) {
       padding: 80px 80px 16px 80px;
     }
     @media only screen and (max-width: 1024px) {
       padding: 48px 48px 16px 48px;
+      aspect-ratio: 4/3;
+      //border: 1px solid red;
     }
     @media only screen and (max-width: 800px) {
       padding: 32px 32px 16px 32px;
@@ -85,7 +88,6 @@
     @media only screen and (max-width: 560px) {
       padding: 16px 16px 16px 16px;
     }
-    aspect-ratio: 224/100;
     img {
       position: absolute;
       z-index: -5;
@@ -93,6 +95,7 @@
       height: 100%;
       top: 0;
       left: 0;
+      object-fit: cover;
     }
     h1,
     span {
@@ -147,6 +150,21 @@
     }
     @media only screen and (max-width: 560px) {
       padding: 16px 16px;
+    }
+  }
+  .back {
+    padding: 56px 112px;
+    @media only screen and (max-width: 1440px) {
+      padding: 40px 80px;
+    }
+    @media only screen and (max-width: 1024px) {
+      padding: 24px 48px;
+    }
+    @media only screen and (max-width: 800px) {
+      padding: 32px 32px;
+    }
+    @media only screen and (max-width: 560px) {
+      padding: 32px 16px;
     }
   }
 }
