--- a/src/styles/_exegesis.scss
+++ b/src/styles/_exegesis.scss
@@ -93,6 +93,10 @@
 
     .form {
       width: 50%;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      gap: 24px;
 
       @media only screen and (max-width: 1024px) {
         width: 70%;
