--- a/src/styles/_exegesis.scss
+++ b/src/styles/_exegesis.scss
@@ -5,17 +5,18 @@
 .exegesis-page-container {
   .hero {
     position: relative;
-    aspect-ratio: 224/100;
+    aspect-ratio: 16/8;
 
     //border: 1px solid red;
-    @media only screen and (max-width: 800px) {
-      aspect-ratio: 390/585;
+    @media only screen and (max-width: 1024px) {
+      aspect-ratio: 4/3;
     }
 
     img {
       width: 100%;
       height: 100%;
       position: absolute;
+      object-fit: cover;
       z-index: -1;
 
       @media only screen and (max-width: 800px) {
@@ -43,24 +44,20 @@
       padding: 48px;
       margin: -144px 48px 48px 48px;
     }
-
-    @media only screen and (max-width: 867px) {
-      margin: -192px 48px 48px 48px;
-    }
-
     @media only screen and (max-width: 800px) {
       padding: 32px;
-      margin: -192px 32px 32px 32px;
+      margin: -128px 32px 32px 32px;
     }
-
+    @media only screen and (max-width: 606px) {
+      margin: -176px 48px 48px 48px;
+    }
     @media only screen and (max-width: 560px) {
       padding: 16px;
-      margin: -144px 16px 16px 16px;
+      margin: -96px 16px 16px 16px;
     }
-
-    @media only screen and (max-width: 389px) {
+    @media only screen and (max-width: 447px) {
       padding: 16px;
-      margin: -176px 16px 16px 16px;
+      margin: -136px 16px 16px 16px;
     }
 
     .datentitle {
