--- a/src/styles/_devotional.scss
+++ b/src/styles/_devotional.scss
@@ -12,10 +12,11 @@
     width: calc((100% - 64px) / 3);
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     padding: 24px;
     color: #000;
     gap: 8px;
-    // border: 1px solid yellow;
+    //border: 1px solid yellow;
     &:nth-child(1) {
       background-color: #f3ddaa80;
     }
@@ -87,6 +88,10 @@
     }
     @media only screen and (max-width: 560px) {
       padding: 16px 16px 16px 16px;
+      h1 {
+        font-size: 24px;
+        line-height: 32px;
+      }
     }
     img {
       position: absolute;
