--- a/src/styles/_exegesis.scss
+++ b/src/styles/_exegesis.scss
@@ -6,6 +6,48 @@
   .hero {
     position: relative;
     aspect-ratio: 16/8;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    .datentitle {
+      // border: 1px solid red;
+      margin: 0px 112px;
+      padding: 112px 112px 16px 112px;
+      color: #fff;
+      background-color: #38afb61a;
+      @media only screen and (max-width: 1440px) {
+        margin: 0px 80px;
+        padding: 80px 80px 16px 80px;
+        h1 {
+          font-size: 36px;
+          line-height: 44px;
+        }
+      }
+      @media only screen and (max-width: 1024px) {
+        margin: 0px 48px;
+        padding: 48px 48px 16px 48px;
+        h1 {
+          font-size: 32px;
+          line-height: 40px;
+        }
+      }
+      @media only screen and (max-width: 800px) {
+        margin: 0px 32px;
+        padding: 32px 32px 16px 32px;
+        h1 {
+          font-size: 28px;
+          line-height: 36px;
+        }
+      }
+      @media only screen and (max-width: 560px) {
+        margin: 0px 16px;
+        padding: 16px 16px 16px 16px;
+        h1 {
+          font-size: 24px;
+          line-height: 32px;
+        }
+      }
+    }
 
     //border: 1px solid red;
     @media only screen and (max-width: 1024px) {
@@ -17,6 +59,7 @@
       height: 100%;
       position: absolute;
       object-fit: cover;
+      object-position: top center;
       z-index: -1;
 
       @media only screen and (max-width: 800px) {
@@ -30,35 +73,27 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
-    margin: -176px 112px 112px 112px;
-    padding: 112px;
+    margin: 0px 112px 112px 112px;
+    padding: 16px 112px 112px 112px;
     background-color: #38afb61a;
     z-index: 5;
 
     @media only screen and (max-width: 1440px) {
-      padding: 80px;
-      margin: -160px 80px 80px 80px;
+      padding: 16px 80px 80px 80px;
+      margin: 0px 80px 80px 80px;
     }
 
     @media only screen and (max-width: 1024px) {
-      padding: 48px;
-      margin: -120px 48px 48px 48px;
+      padding: 16px 48px 48px 48px;
+      margin: 0px 48px 48px 48px;
     }
     @media only screen and (max-width: 800px) {
-      padding: 32px;
-      margin: -104px 32px 32px 32px;
-    }
-    @media only screen and (max-width: 606px) {
-      margin: -152px 48px 48px 48px;
+      padding: 16px 32px 32px 32px;
+      margin: 0px 32px 32px 32px;
     }
     @media only screen and (max-width: 560px) {
-      padding: 16px;
-      margin: -88px 16px 16px 16px;
-    }
-
-    @media only screen and (max-width: 447px) {
-      padding: 16px;
-      margin: -112px 16px 16px 16px;
+      padding: 16px 16px 16px 16px;
+      margin: 0px 16px 16px 16px;
     }
 
     .datentitle {
